--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 	<!-- our javascript app -->
 	<script type="text/javascript" src="assets/javascript/beer_app.js"></script>
+
+	<!-- firebase -->
+	<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 </head>
 <body>
 
