--- a/index.html
+++ b/index.html
@@ -25,7 +25,51 @@
 	<!-- our javascript app -->
 	<script type="text/javascript" src="assets/javascript/beer_app.js"></script>
 </head>
-<body>
 
+<body>
+	<div class="container">
+		<div class="col-md-12">
+			<header>
+				<h1>Beer Near Here</h1>
+			</header>
+		</div>
+	</div>
+
+	<div class="searchbar">
+		<div class="row">
+			<div class="col-md-6">Search function placeholder</div>
+		    	<div id=text>
+
+ 		<form id="form">
+   			<label for="input">Type in the name of a beer!.</label>
+   				<input type="text" id="beer-input" class="form-control" placeholder="Don't worry, I'll find you the beer you are looking for!" id="beer-input"><br>
+   
+   <!-- Button triggers new movie to be added -->
+   <input id="search" type="submit" class= "btn btn-success"  value="Find Beer">
+ </form>
+   </div>
+
+<div id=beerinfo>
+
+</div>
+		    	<div class="beerlist-section">
+				</div>
+					<div class="col-md-6">Unordered list of beer
+					</div>
+			</div>
+		
+	<div class="map-section">
+		<div class="row">
+			<div class="col-md-6">Google map</div>
+		
+		<div class="Directions"></div>
+			<div class="col-md-6">Directions placeholder</div>
+	</div>
+
+	<div class="footer">
+		<div class="container">
+			<div class="col-md-12">Footer placeholder</div>
+		</div>
+	</div>
 </body>
 </html>
