--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 </head>
 
 <body>
+	<!-- place for the main title -->
 	<div class="container">
-		<div class="col-md-12">
-			<header>
-				<h1>Beer Near Here</h1>
-			</header>
+		<div class="row">
+	<div class="col-md-12 jumbotron">
+		<div class="text-center">
+		<h1>Beer Near Here</h1>
+			</div>
+		</div>
 		</div>
 	</div>
 
